ops/k8s-oab-backend.yml

apiVersion: v1
kind: Service
metadata:
  name: oaboard-backend
spec:
  selector:
    app: oaboard-backend-app
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oaboard-backend-app
  name: oaboard-backend

spec:
  progressDeadlineSeconds: 600

  selector:
    matchLabels:
      app: oaboard-backend-app

  template:
    metadata:
      labels:
        app: oaboard-backend-app

    spec:
      containers:
      - image: oaboard-server
        imagePullPolicy: Never
        name: openapi-board-backend

        ports:
          - name: http
            containerPort: 8080

        volumeMounts:
          - name: backend-cfg-volume
            mountPath: /etc/application/config.yaml
            subPath: config.yaml

      volumes:
        - name: backend-cfg-volume
          configMap:
            name: backend-configmap

      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 5
