ops/k8s-oab-front.yml
apiVersion: v1
kind: Service
metadata:
  name: oaboard-front
spec:
  externalTrafficPolicy: Cluster
  selector:
    app: oaboard-front-app
  ports:
  - port: 8020
    protocol: TCP
    targetPort: 80
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oaboard-front-app
  name: oaboard-front

spec:
  progressDeadlineSeconds: 600
  replicas: 1

  selector:
    matchLabels:
      app: oaboard-front-app

  template:
    metadata:
      labels:
        app: oaboard-front-app
    spec:
      containers:
      - image: oaboard-front
        imagePullPolicy: Never
        name: openapi-board-front

        ports: 
          - name: http
            containerPort: 80

      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 3
